[package]
name = "pi_flex_layout"
version = "0.1.0"
authors = ["zmythleo <zmythleo@gmail.com>"]
edition = "2018"
include = ["src/**/*", "Cargo.toml"]
description = "High performance & cross-platform Flexbox implementation"
readme = "README.md"
keywords = ["ios", "android", "cross-platform", "layout", "flexbox", "pi"]
categories = ["gui"]
license-file = "LICENSE"

[badges]
circle-ci = { repository = "vislyhq/stretch", branch = "master" }
maintenance = { status = "experimental" }

[dependencies]
libm = "0.1.2"
paste = "0.1"
pi_idtree = "0.1"
pi_dirty = "0.1"
pi_heap = "0.1"
pi_map = "0.1"
serde = { version = "1.0", features = ["derive"] }
pi_debug_info = "0.1"
pi_slab = "0.1"

[features]
default = ["std"]
std = []

[dev-dependencies]
criterion = "0.2"

[profile.release]
lto = true
panic = 'abort'

[[bench]]
name = "generated"
path = "benches/generated/mod.rs"
harness = false

[[bench]]
name = "complex"
harness = false
