[package]
name = "pi_flex_layout"
version = "0.2.0"
authors = ["zmythleo <zmythleo@gmail.com>"]
edition = "2018"
include = ["src/**/*", "Cargo.toml"]
description = "High performance & cross-platform Flexbox implementation"
readme = "README.md"
keywords = ["cross-platform", "layout", "flexbox", "pi"]
categories = ["gui"]
license = "MIT OR Apache-2.0"

[badges]
circle-ci = { repository = "vislyhq/stretch", branch = "master" }
maintenance = { status = "experimental" }

[dependencies]
libm = "0.1.2"
paste = "0.1"
pi_null="0.1"
pi_dirty = "0.1"
pi_heap = "0.1"
pi_map = "0.1"
serde = { version = "1.0", features = ["derive"], option=true }
pi_debug_info = "0.1"
pi_slab = "0.1"
pi_enum_default_macro="0.1"
pi_slotmap={version="0.1", features = ["serde"]}
# pi_slotmap_tree="0.2"
pi_slotmap_tree = { git = "https://github.com/GaiaWorld/pi_slotmap_tree.git" }

[features]
default = ["std"]
std = []

[dev-dependencies]
criterion = "0.2"

[profile.release]
lto = true
panic = 'abort'

# [patch.crates-io]
# pi_slotmap_tree = { path = "../pi_slotmap_tree" }

# [[bench]]
# name = "generated"
# path = "benches/generated/mod.rs"
# harness = false

# [[bench]]
# name = "benches/complex.rs"
# harness = false
