[package]
name = "pi_flex_layout"
version = "0.2.2"
authors = ["zmythleo <zmythleo@gmail.com>"]
edition = "2018"
include = ["src/**/*", "Cargo.toml"]
description = "High performance & cross-platform Flexbox implementation"
readme = "README.md"
keywords = ["cross-platform", "layout", "flexbox", "pi"]
categories = ["gui"]
license = "MIT OR Apache-2.0"

[badges]
circle-ci = { repository = "vislyhq/stretch", branch = "master" }
maintenance = { status = "experimental" }

[dependencies]
paste = "0.1"
log = "0.4"
pi_null="0.1"
pi_heap = "0.1"
pi_map = "0.1"
serde = { version = "1.0", features = ["derive"], option=true }
pi_print_any = "0.1"
pi_enum_default_macro="0.1"
pi_slotmap={version="0.1", features = ["serde"]}
pi_slotmap_tree="0.3"
pi_dirty = "0.1"

[features]
default = ["std"]
std = []

[dev-dependencies]
criterion = "0.2"

[profile.release]
lto = true
panic = 'abort'

[[test]]
name = "test_generated"
path = "tests/generated/mod.rs"
harness = false

[workspace]
members = [ "scripts/gentest" ]

# [[bench]]
# name = "generated"
# path = "benches/generated/mod.rs"
# harness = false

# [[bench]]
# name = "benches/complex.rs"
# harness = false
